# pcapsql

./: CHANGELOG.md  Cargo.toml  FUZZING.md  LICENSE  README.md
.github/workflows/: aur.yml  ci.yml  cloud-integration.yml  fuzz.yml  publish-crates.yml  release.yml
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/fuzz_bgp/: notification  open
fuzz/corpus/fuzz_compression/: dns.cap.zst
fuzz/corpus/fuzz_dns/: a_query  a_response  aaaa_query  multi_answer  mx_query  nxdomain  txt_query
fuzz/corpus/fuzz_gre/: with_checksum  with_key  with_key_seq
fuzz/corpus/fuzz_gtp/: gtpc  gtpu
fuzz/corpus/fuzz_icmp/: icmp_dest_unreach  icmp_echo_reply  icmp_echo_request  icmp_time_exceeded  icmpv6_echo_reply  icmpv6_echo_request  icmpv6_na  icmpv6_ns
fuzz/corpus/fuzz_ospf/: dbd  hello
fuzz/corpus/fuzz_pcap_reader/: gre_keyed.pcap  gtp_user.pcap  ipinip.pcap  triple_encap_vxlan_ipinip.pcap  vxlan_simple.pcap
fuzz/corpus/fuzz_protocol_chain/: arp  eth_ipv4  eth_ipv4_icmp  eth_ipv4_tcp  eth_ipv4_udp  eth_ipv4_udp_dns  eth_ipv6  eth_ipv6_icmpv6  eth_ipv6_tcp  eth_ipv6_udp  eth_min  gre  vlan_ipv4_tcp  vxlan
fuzz/corpus/fuzz_quic/: handshake  initial  retry  short_header  version_neg  zero_rtt
fuzz/corpus/fuzz_ssh/: banner_dropbear  banner_openssh  banner_putty  channel_open  disconnect  kexinit  userauth_request
fuzz/corpus/fuzz_tcp_options/: end_option  max_options  mss_only  multi_sack  sack_block  syn_options  timestamp
fuzz/corpus/fuzz_tls/: app_data  client_hello  server_hello
fuzz/corpus/fuzz_vxlan/: basic  vni1000
fuzz/fuzz_targets/: fuzz_bgp.rs  fuzz_bpf.rs  fuzz_compression.rs  fuzz_dns.rs  fuzz_gre.rs  fuzz_gtp.rs  fuzz_http.rs  fuzz_icmp.rs  fuzz_ip_options.rs  fuzz_ospf.rs  fuzz_pcap_reader.rs  fuzz_protocol_chain.rs  fuzz_quic.rs  fuzz_ssh.rs  fuzz_tcp_options.rs  fuzz_tls.rs  fuzz_vxlan.rs
fuzz/scripts/: gen_fuzz_frames.py  gen_seeds.py
fuzz/src/: frames.rs
packaging/arch/: PKGBUILD
pcapsql-core/: Cargo.toml  README.md
pcapsql-core/src/: error.rs  lib.rs  prelude.rs
pcapsql-core/src/cache/: lru.rs  mod.rs
pcapsql-core/src/format/: address.rs  mod.rs
pcapsql-core/src/io/: cloud.rs  decompress.rs  mmap.rs  mod.rs  pcap_stream.rs  source.rs
pcapsql-core/src/pcap/: mod.rs  reader.rs
pcapsql-core/src/protocol/: arp.rs  bgp.rs  context.rs  dhcp.rs  dns.rs  ethernet.rs  field.rs  gre.rs  gtp.rs  http.rs  icmp.rs  icmpv6.rs  ipsec.rs  ipv4.rs  ipv6.rs  linux_sll.rs  mod.rs  mpls.rs  netlink.rs  ntp.rs  ospf.rs  projection.rs  pruning.rs  quic.rs  registry.rs  rtnetlink.rs  ssh.rs  tcp.rs  test_utils.rs  tls.rs  udp.rs  vlan.rs  vxlan.rs
pcapsql-core/src/schema/: field.rs  kind.rs  mod.rs
pcapsql-core/src/stream/: connection.rs  context.rs  manager.rs  mod.rs  parser.rs  reassembly.rs  registry.rs
pcapsql-core/src/stream/parsers/: http.rs  http2.rs  mod.rs  tls.rs  tls_decrypt.rs
pcapsql-core/src/tls/: decrypt.rs  kdf.rs  keylog.rs  mod.rs  session.rs
pcapsql-core/tests/: tls_integration.rs
pcapsql-datafusion/: Cargo.toml  README.md  build.rs
pcapsql-datafusion/benches/: parsing.rs
pcapsql-datafusion/src/: error.rs  lib.rs  main.rs
pcapsql-datafusion/src/cli/: args.rs  export.rs  mod.rs  output.rs  repl.rs  sqlite.rs  uri.rs
pcapsql-datafusion/src/query/: arrow_schema.rs  filter.rs  frames.rs  mod.rs  provider.rs  stream_tables.rs
pcapsql-datafusion/src/query/bpf/: ast.rs  error.rs  mod.rs  parser.rs  sql.rs
pcapsql-datafusion/src/query/builders/: normalized.rs  protocol.rs
pcapsql-datafusion/src/query/providers/: batch_stream.rs  mod.rs  protocol_provider.rs  stream_exec.rs
pcapsql-datafusion/src/query/tables/: arp.rs  bgp.rs  dhcp.rs  dns.rs  ethernet.rs  frames.rs  gre.rs  gtp.rs  http.rs  http2.rs  http_messages.rs  ipsec.rs  linux_sll.rs  mod.rs  mpls.rs  netlink.rs  ntp.rs  ospf.rs  quic.rs  rtnetlink.rs  ssh.rs  tcp.rs  tcp_connections.rs  tcp_streams.rs  tls.rs  tls_sessions.rs  udp.rs  vlan.rs  vxlan.rs
pcapsql-datafusion/src/query/udf/: bgp.rs  datetime.rs  dns.rs  gtp.rs  hex.rs  histogram.rs  icmp.rs  info.rs  ipv4.rs  ipv6.rs  mac.rs  mod.rs  ntp_proto.rs  ospf.rs  protocol.rs  tcp.rs  time.rs  tls_proto.rs
pcapsql-datafusion/src/query/udtf/: cache_stats.rs  mod.rs
pcapsql-datafusion/src/query/views/: bgp.rs  dhcp.rs  dns.rs  gre.rs  gtp.rs  http.rs  icmpv6.rs  ipsec.rs  mld.rs  mod.rs  mpls.rs  ndp.rs  ospf.rs  quic.rs  tunneled.rs  udp.rs  vxlan.rs
pcapsql-datafusion/tests/: cache_stats_test.rs  cloud_integration.rs  e2e_tls_http2.rs
pcapsql-duckdb/: Cargo.toml  Makefile
pcapsql-duckdb/scripts/: append_metadata.py
pcapsql-duckdb/src/: duckdb_schema.rs  error.rs  lib.rs  macros.rs
pcapsql-duckdb/src/udf/: address.rs  cidr.rs  hex.rs  mod.rs  protocol.rs
pcapsql-duckdb/src/vtab/: batch_builder.rs  mod.rs  protocol_tables.rs  read_pcap.rs  registry.rs
src/: error.rs  lib.rs  main.rs
src/cache/: lru.rs  mod.rs
src/cli/: args.rs  export.rs  mod.rs  output.rs
src/format/: address.rs
src/io/: decompress.rs  mmap.rs  mod.rs  source.rs
src/pcap/: mod.rs  packet.rs  reader.rs
src/protocol/: arp.rs  context.rs  dhcp.rs  dns.rs  ethernet.rs  field.rs  http.rs  icmp.rs  icmpv6.rs  ipv4.rs  ipv6.rs  mod.rs  ntp.rs  quic.rs  registry.rs  ssh.rs  tcp.rs  test_utils.rs  tls.rs  udp.rs  vlan.rs
src/query/: batch.rs  filter.rs  frames.rs  mod.rs  provider.rs  schema.rs  stream_provider.rs  streaming.rs
src/query/builders/: mod.rs  normalized.rs  protocol.rs
src/query/providers/: batch_stream.rs  protocol_provider.rs  stream_exec.rs
src/query/tables/: http.rs  http_messages.rs  icmp.rs  icmpv6.rs  ipv4.rs  ipv6.rs  mod.rs  tcp_connections.rs  tcp_streams.rs  tls.rs  tls_sessions.rs
src/query/udf/: dns.rs  hex.rs  mac.rs  mod.rs  tcp.rs
src/query/views/: arp.rs  icmp.rs  ntp.rs  packets.rs  ssh.rs  tcp.rs  tls.rs
src/stream/: manager.rs  mod.rs  parser.rs  reassembly.rs
src/stream/parsers/: http.rs  mod.rs  tls.rs
testdata/cloud/: docker-compose.yml  setup.sh
testdata/scripts/: gen_format_tests.py
tests/: cache_mmap.rs  integration_tests.rs  normalized_schema.rs  streaming.rs
