[workspace]
resolver = "2"
members = [
    "pcapsql-core",
    "pcapsql-datafusion",
    "pcapsql-duckdb",
]

# Default to building the CLI
default-members = ["pcapsql-datafusion"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pcapsql contributors"]
license = "MIT"
repository = "https://github.com/your-org/pcapsql"

[workspace.dependencies]
# Core dependencies (used by pcapsql-core)
thiserror = "1.0"
bytes = "1.0"
etherparse = "0.15"
pcap-parser = "0.15"
httparse = "1.8"
flate2 = "1.0"
zstd = "0.13"
lz4_flex = "0.11"
bzip2 = "0.4"
xz2 = "0.1"
memmap2 = "0.9"
tracing = "0.1"

# DataFusion dependencies (used by pcapsql-datafusion)
arrow = "57"
datafusion = "51"
datafusion-catalog = "51"
datafusion-datasource = "51"
parquet = "57"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
async-trait = "0.1"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
rustyline = "14"
comfy-table = "7"
indicatif = "0.17"
dirs = "5"

# Shared
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
hex = "0.4"

# Small collections
smallvec = "1.13"

# Compact strings (inline up to 24 bytes)
compact_str = "0.8"

[profile.release]
lto = true
codegen-units = 1
