[workspace]
resolver = "2"
members = [
    "pcapsql-core",
    "pcapsql-datafusion",
    "pcapsql-duckdb",
]

# Default to building the CLI
default-members = ["pcapsql-datafusion"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Max Tottenham"]
license = "MIT"
repository = "https://github.com/mtottenh/pcapsql"
homepage = "https://github.com/mtottenh/pcapsql"

[workspace.dependencies]
# Core dependencies (used by pcapsql-core)
thiserror = "1.0"
bytes = "1.0"
etherparse = "0.15"
pcap-parser = "0.15"
httparse = "1.8"
simple-dns = "0.11"
flate2 = "1.0"
zstd = "0.13"
lz4_flex = "0.11"
bzip2 = "0.4"
xz2 = "0.1"
memmap2 = "0.9"
tracing = "0.1"

# DataFusion dependencies (used by pcapsql-datafusion)
arrow = "57"
datafusion = "51"
datafusion-catalog = "51"
datafusion-datasource = "51"
parquet = "57"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
async-trait = "0.1"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
rustyline = "14"
comfy-table = "7"
indicatif = "0.17"
dirs = "5"

# Shared
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

# Histogram support
hdrhistogram = "7"

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
hex = "0.4"

# Small collections
smallvec = "1.13"

# Compact strings (inline up to 24 bytes)
compact_str = "0.8"

# TLS parsing (Rusticata project - zero-copy TLS parser for passive analysis)
tls-parser = "0.12"
nom = "7"  # Required by tls-parser

# Hash functions for JA3 fingerprinting
md5 = "0.7"

# Cryptographic primitives for TLS decryption
ring = "0.17"

# HTTP/2 HPACK header compression (RFC 7541)
hpack = "0.3"

# Netlink protocol parsing
netlink-packet-core = "0.7"
netlink-packet-route = "0.21"
netlink-packet-utils = "0.5"

# SQLite database support
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
